[gd_scene load_steps=37 format=3 uid="uid://b285vl84brpq4"]

[ext_resource type="Shader" path="res://menu/menu.gdshader" id="1_fuy8x"]
[ext_resource type="Script" path="res://menu/menu.gd" id="1_wostc"]
[ext_resource type="Texture2D" uid="uid://crkpribybiqyn" path="res://art/menu/menu_button_new_normal.png" id="2_6qn2j"]
[ext_resource type="Texture2D" uid="uid://pg2pmejmai2g" path="res://art/menu/menu_button_new_pressed.png" id="3_2epd5"]
[ext_resource type="Texture2D" uid="uid://du1vtwesdqirl" path="res://art/menu/menu_button_new_hover.png" id="4_xlhr0"]
[ext_resource type="Texture2D" uid="uid://dv3wxpfrl0g8" path="res://art/menu/menu_button_new_disabled.png" id="5_xudfb"]
[ext_resource type="Texture2D" uid="uid://cgfaxwfqlx7wu" path="res://art/menu/menu_button_continue_normal.png" id="6_ftvb1"]
[ext_resource type="Texture2D" uid="uid://dp7etyfteo7xf" path="res://art/menu/menu_button_continue_pressed.png" id="7_msfeh"]
[ext_resource type="Texture2D" uid="uid://c3jnw7hnk5tj3" path="res://art/menu/menu_button_continue_hover.png" id="8_bldkh"]
[ext_resource type="Texture2D" uid="uid://c0a3bwotta78" path="res://art/menu/menu_button_continue_disabled.png" id="9_cl4yb"]
[ext_resource type="Texture2D" uid="uid://s0kdwim2aeuq" path="res://art/menu/menu_button_options_normal.png" id="10_780f3"]
[ext_resource type="Texture2D" uid="uid://bq326a8n61qna" path="res://art/menu/menu_button_progress_normal.png" id="11_fkemn"]
[ext_resource type="Texture2D" uid="uid://bsf73snrhfvm3" path="res://art/menu/menu_button_options_pressed.png" id="11_wpy1m"]
[ext_resource type="Texture2D" uid="uid://c2g1kvppvkqf8" path="res://art/menu/menu_button_progress_pressed.png" id="12_h3wup"]
[ext_resource type="Texture2D" uid="uid://cwtqwqtf2wayt" path="res://art/menu/menu_button_options_hover.png" id="12_tx642"]
[ext_resource type="Texture2D" uid="uid://bko3wrs2lw3ft" path="res://art/menu/menu_button_options_disabled.png" id="13_lbx6j"]
[ext_resource type="Texture2D" uid="uid://cj6cu5ws7ht76" path="res://art/menu/menu_button_progress_hover.png" id="13_nqsic"]
[ext_resource type="Texture2D" uid="uid://ckrev6dk1qiu8" path="res://art/menu/menu_button_credits_normal.png" id="14_7i1sk"]
[ext_resource type="Texture2D" uid="uid://m2yoq167uceo" path="res://art/menu/menu_button_progress_disabled.png" id="14_nexo3"]
[ext_resource type="Texture2D" uid="uid://itjo3nup4aq7" path="res://art/menu/menu_button_credits_pressed.png" id="15_tlngg"]
[ext_resource type="Texture2D" uid="uid://dks56ku66ereh" path="res://art/menu/menu_button_credits_hover.png" id="16_p847k"]
[ext_resource type="Texture2D" uid="uid://muwxhcb1i0e0" path="res://art/menu/menu_button_credits_disabled.png" id="17_temhq"]
[ext_resource type="Texture2D" uid="uid://bs1bq1yp5qux3" path="res://art/menu/menu_button_exit_normal.png" id="18_7dq86"]
[ext_resource type="Texture2D" uid="uid://p7084f6q23xm" path="res://art/menu/menu_button_exit_pressed.png" id="19_xthid"]
[ext_resource type="Texture2D" uid="uid://bplrxfhcod6fy" path="res://art/menu/menu_button_exit_hover.png" id="20_cbc4j"]
[ext_resource type="Texture2D" uid="uid://bygvwkl0lsiou" path="res://art/menu/menu_button_exit_disabled.png" id="21_dbtut"]
[ext_resource type="Texture2D" uid="uid://bwbsiy1368up4" path="res://art/menu/menu_button_sound_on.png" id="23_h8lnj"]
[ext_resource type="Texture2D" uid="uid://dy27tfcjq1uht" path="res://art/menu/menu_button_sound_off.png" id="24_vmjke"]
[ext_resource type="Texture2D" uid="uid://cwtrcj5shnytb" path="res://art/menu/menu_button_music_on.png" id="25_wruwq"]
[ext_resource type="Texture2D" uid="uid://b4xdlvsvgjl6k" path="res://art/menu/menu_button_music_off.png" id="26_nqq2l"]
[ext_resource type="Texture2D" uid="uid://cvkjhnfhs38ff" path="res://art/menu/menu_button_back_normal.png" id="27_2t5da"]
[ext_resource type="Texture2D" uid="uid://c6u6vmr03c7ag" path="res://art/menu/menu_button_back_pressed.png" id="28_yg5uj"]
[ext_resource type="Texture2D" uid="uid://ctnbxgblmfc5x" path="res://art/menu/menu_button_back_hover.png" id="29_rtrop"]
[ext_resource type="Texture2D" uid="uid://150oerf6jhrw" path="res://art/menu/menu_button_back_disabled.png" id="30_684ur"]
[ext_resource type="PackedScene" uid="uid://dp5niqamgmbpl" path="res://menu/progress.tscn" id="35_ru3bc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00t86"]
shader = ExtResource("1_fuy8x")
shader_parameter/base_scroll_speed = 50.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wostc")

[node name="MainMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
material = SubResource("ShaderMaterial_00t86")
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="TextureButton" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_6qn2j")
texture_pressed = ExtResource("3_2epd5")
texture_hover = ExtResource("4_xlhr0")
texture_disabled = ExtResource("5_xudfb")

[node name="ContinueGameButton" type="TextureButton" parent="MainMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("6_ftvb1")
texture_pressed = ExtResource("7_msfeh")
texture_hover = ExtResource("8_bldkh")
texture_disabled = ExtResource("9_cl4yb")

[node name="ProgressButton" type="TextureButton" parent="MainMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("11_fkemn")
texture_pressed = ExtResource("12_h3wup")
texture_hover = ExtResource("13_nqsic")
texture_disabled = ExtResource("14_nexo3")

[node name="OptionsButton" type="TextureButton" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_780f3")
texture_pressed = ExtResource("11_wpy1m")
texture_hover = ExtResource("12_tx642")
texture_disabled = ExtResource("13_lbx6j")

[node name="CreditsButton" type="TextureButton" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("14_7i1sk")
texture_pressed = ExtResource("15_tlngg")
texture_hover = ExtResource("16_p847k")
texture_disabled = ExtResource("17_temhq")

[node name="ExitButton" type="TextureButton" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("18_7dq86")
texture_pressed = ExtResource("19_xthid")
texture_hover = ExtResource("20_cbc4j")
texture_disabled = ExtResource("21_dbtut")

[node name="Progress" parent="." instance=ExtResource("35_ru3bc")]
visible = false
layout_mode = 1

[node name="OptionsMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="OptionsMenu"]
material = SubResource("ShaderMaterial_00t86")
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="CenterContainer" type="CenterContainer" parent="OptionsMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/CenterContainer"]
layout_mode = 2

[node name="SoundCheckButton" type="CheckButton" parent="OptionsMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_icons/checked = ExtResource("23_h8lnj")
theme_override_icons/unchecked = ExtResource("24_vmjke")

[node name="MusicCheckButton" type="CheckButton" parent="OptionsMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_icons/checked = ExtResource("25_wruwq")
theme_override_icons/unchecked = ExtResource("26_nqq2l")

[node name="EmptyLabel" type="Label" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitOptionsButton" type="TextureButton" parent="OptionsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
texture_normal = ExtResource("27_2t5da")
texture_pressed = ExtResource("28_yg5uj")
texture_hover = ExtResource("29_rtrop")
texture_disabled = ExtResource("30_684ur")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ProgressButton" to="." method="_on_progress_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="OptionsMenu/CenterContainer/VBoxContainer/SoundCheckButton" to="." method="_on_sound_check_button_toggled"]
[connection signal="toggled" from="OptionsMenu/CenterContainer/VBoxContainer/MusicCheckButton" to="." method="_on_music_check_button_toggled"]
[connection signal="pressed" from="OptionsMenu/CenterContainer/VBoxContainer/ExitOptionsButton" to="." method="_on_exit_options_button_pressed"]
